Fix env variables